<resources>
    <string name="app_name">PmaBosnjak</string>
    <string name="otvoristudenta">Open student</string>
    <string name="imet">Name</string>
    <string name="prezimet">Surname</string>
    <string name="datumt">Date of Birth</string>

    <string name="saztekatt">Open summary</string>
    <string name="predmett">Subject</string>
    <string name="profesort">Professor</string>
    <string name="prt">Hours PR</string>
    <string name="lvt">Hours LV</string>
    <string name="izbornikt">Elective</string>

    <string name="headert">Header</string>
    <string name="nazadt">Open</string>
    <string name="select_language_prompt">Odaberite jezik</string>
    <string name="croatian">Hrvatski</string>
    <string name="english">Engleski</string>
    <string name="hungarian">Mađarski</string>


    <string-array name="languages">
        <item>@string/select_language_prompt</item>
        <item>@string/croatian</item>
        <item>@string/english</item>
        <item>@string/hungarian</item>
    </string-array>
</resources>